<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <LinearLayout
        android:id="@+id/top_fixed_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="16dp"
        android:paddingBottom="8dp"
        android:layout_alignParentTop="true">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="16dp"
            android:background="@drawable/bg_search_bar"
            android:drawableStart="@drawable/ic_search"
            android:drawablePadding="12dp"
            android:hint="@string/search"
            android:textColor="@color/black"
            android:paddingHorizontal="16dp"
            android:textColorHint="@color/gray_text" />

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="16dp">

                <TextView
                    android:text="@string/beds"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    style="@style/CategoryText"/>

                <TextView
                    android:text="@string/sofas"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    style="@style/CategoryText" />

                <TextView
                    android:text="@string/tables"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    style="@style/CategoryText" />

                <TextView
                    android:text="@string/chairs"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    style="@style/CategoryText" />

                <TextView
                    android:text="@string/cabinets"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    style="@style/CategoryText" />

            </LinearLayout>
        </HorizontalScrollView>
    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/black"
        app:itemIconTint="@color/white"
        app:itemTextColor="@color/white"
        app:menu="@menu/menu_bottom_nav" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/top_fixed_area"
        android:layout_above="@id/bottom_navigation"
        android:background="@color/white"
        android:clipToPadding="false"
        android:paddingTop="20dp"

        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
</RelativeLayout>