<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="16dp"
    android:layout_marginBottom="12dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="20dp"
    app:cardElevation="0dp"
    app:strokeColor="#DDDDDD"
    app:strokeWidth="2dp">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">
        <TextView
            android:id="@+id/tv_prod_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/img_product"/>
        <TextView
            android:id="@+id/tv_prod_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/price_placeholder"
            android:textSize="16sp"
            android:textColor="@color/price_color"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_prod_name" />
        <TextView
            android:id="@+id/tv_prod_sold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:text="@string/sold_placeholder"
            android:textSize="14sp"
            android:textColor="@color/gray_text"
            app:layout_constraintBottom_toTopOf="@+id/tv_prod_loc"
            app:layout_constraintStart_toStartOf="parent" />
        <TextView
            android:id="@+id/tv_prod_loc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location_placeholder"
            android:textSize="14sp"
            android:textColor="@color/gray_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/img_product"
            android:layout_width="120dp"
            android:layout_height="100dp"
            android:scaleType="centerCrop"
            android:src="@drawable/bed2"
            app:shapeAppearanceOverlay="@style/RoundedImage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>